--- a/Unmanaged Source/phdskmnt/phdskmnt.vcxproj
+++ b/Unmanaged Source/phdskmnt/phdskmnt.vcxproj
@@ -123,7 +123,7 @@
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
     <RootNamespace>phdskmnt</RootNamespace>
     <ProjectName>phdskmnt</ProjectName>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.22621.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|Win32'">
     <TargetVersion>WindowsV6.3</TargetVersion>
@@ -136,7 +136,7 @@
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|Win32'">
-    <TargetVersion>Win7</TargetVersion>
+    <TargetVersion>Windows10</TargetVersion>
     <UseDebugLibraries>True</UseDebugLibraries>
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
   </PropertyGroup>
@@ -186,18 +186,19 @@
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-    <TargetVersion>Win7</TargetVersion>
+    <TargetVersion>Windows10</TargetVersion>
     <UseDebugLibraries>True</UseDebugLibraries>
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|ARM'" Label="Configuration">
-    <TargetVersion>Win7</TargetVersion>
+    <TargetVersion>Windows10</TargetVersion>
     <UseDebugLibraries>True</UseDebugLibraries>
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|ARM64'" Label="Configuration">
     <UseDebugLibraries>True</UseDebugLibraries>
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
+    <TargetVersion>Windows10</TargetVersion>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|x64'">
     <TargetVersion>WindowsV6.3</TargetVersion>
@@ -372,103 +373,169 @@
     <EnableInf2cat>false</EnableInf2cat>
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|ARM64'">
     <EnableInf2cat>false</EnableInf2cat>
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|ARM64'">
     <EnableInf2cat>false</EnableInf2cat>
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|ARM64'">
     <EnableInf2cat>false</EnableInf2cat>
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|ARM64'">
     <EnableInf2cat>false</EnableInf2cat>
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|ARM64'">
     <EnableInf2cat>false</EnableInf2cat>
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|Win32'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|ARM'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|ARM'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|ARM'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|ARM'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|ARM'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|ARM'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|Win32'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|Win32'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|Win32'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|Win32'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|Win32'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|x64'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|x64'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|x64'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|x64'">
     <TimeStampServer>
     </TimeStampServer>
+    <IncludePath>..\..\..\imdisk\inc;$(IncludePath);$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\..\imdisk\cpl\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <EnableInf2cat>false</EnableInf2cat>
   </PropertyGroup>
   <!-- The WrappedTaskItems label is used by the conversion tool to identify the location where items 
         associated with wrapped tasks will reside.-->
@@ -481,6 +548,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|Win32'">
     <Inf />
     <Inf />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|Win32'">
     <Inf />
@@ -488,6 +561,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|Win32'">
     <Inf />
     <Inf />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|Win32'">
     <Inf />
@@ -495,6 +574,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|Win32'">
     <Inf />
     <Inf />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|Win32'">
     <Inf />
@@ -502,6 +587,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|Win32'">
     <Inf />
     <Inf />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|Win32'">
     <Inf />
@@ -509,6 +600,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|Win32'">
     <Inf />
     <Inf />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|Win32'">
     <Inf />
@@ -516,30 +613,132 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|Win32'">
     <Inf />
     <Inf />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|ARM64'">
     <ClCompile />
     <PreLinkEvent />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|ARM64'">
     <ClCompile />
     <PreLinkEvent />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|ARM64'">
     <ClCompile />
     <PreLinkEvent />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|ARM64'">
     <ClCompile />
     <PreLinkEvent />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|ARM64'">
     <ClCompile />
     <PreLinkEvent />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|ARM64'">
     <ClCompile />
     <PreLinkEvent />
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|ARM'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|ARM'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|ARM'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|ARM'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|ARM'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|ARM'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win7 Release|x64'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Debug|x64'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8 Release|x64'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|x64'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Release|x64'">
+    <ClCompile>
+      <TreatWarningAsError>false</TreatWarningAsError>
+    </ClCompile>
+    <DriverSign>
+      <FileDigestAlgorithm>sha256</FileDigestAlgorithm>
+    </DriverSign>
   </ItemDefinitionGroup>
   <ItemGroup>
     <!-- We only add items (e.g. form ClSourceFiles) that do not already exist (e.g in the ClCompile list), this avoids duplication -->
